trybuild-qcell/src/compiletest/lcell_generativity-06.stderr
error[E0502]: cannot borrow `owner` as immutable because it is also borrowed as mutable
  --> src/compiletest/lcell_generativity-06.rs:12:17
   |
11 |     let c1mutref = owner.rw(&c1);
   |                    ------------- mutable borrow occurs here
12 |     let c2ref = owner.ro(&c2);    // Compile error
   |                 ^^^^^^^^^^^^^ immutable borrow occurs here
13 |     *c1mutref += 1;
   |     -------------- mutable borrow later used here
